--- a/hw06-jpa/src/main/resources/application.yml
+++ b/hw06-jpa/src/main/resources/application.yml
@@ -12,4 +12,6 @@ spring:
     hibernate:
       ddl-auto: none
     show-sql: true
-    enable_lazy_load_no_trans: true
+    properties:
+      hibernate:
+        format_sql: true
