--- a/hw09-mvc/pom.xml
+++ b/hw09-mvc/pom.xml
@@ -85,6 +85,11 @@
             <version>${mongock.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
